2011-12-27  Stefano Lattarini  <stefano.lattarini@gmail.com>

	yacc/lex tests: avoid too much failures with FreeBSD make

	In various Yacc/Lex tests, we used to run "make distcheck" commands
	whose value was mostly dubious, and, even when it was there, was
	very, very little.  The presence of these extra distchecks had two
	disadvantages: it slowed down our already-too-slow testsuite even
	more, and, much worse, caused a lot of extra failures with FreeBSD,
	all due to automake bug#7884, which is already exposed by the test
	case `yacc-dist-nobuild.test'.

	We can improve this situation by simply removing "make distcheck"
	calls from a few testcases, or making them conditional to the use
	of GNU make.

	* tests/lex-clean-cxx.test: Do not call "make distcheck".
	* tests/lex-clean.test: Likewise.
	* tests/yacc-clean-cxx.test: Likewise.
	* tests/yacc-clean.test: Likewise.
	* tests/yflags-force-override.test: Likewise.
	* tests/yacc-nodist.test: Only run "make distcheck" if make
	is GNU make.

2011-12-15  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Merge branch 'maint' into 'yacc-work'
	* tests/silent-lex.test: Provide a dummy `yywrap()' function, to
	avoid link errors on systems that doesn't provide a "lex library".
	See also commit `v1.11-546-gca0ba5d'.

2011-12-14  Stefano Lattarini  <stefano.lattarini@gmail.com>

	readme: reference webpages for automake mailing lists
	* README: Rationalize and reorganize the (brief) description of
	the automake mailing lists.   In particular, instead of suggesting
	the reader to write to the `-request' addresses to subscribe to
	mailing lists, point him to the relevant webpages, where he can
	also subscribe via a web form.

2011-12-14  Stefano Lattarini  <stefano.lattarini@gmail.com>

	readme: update advice about testsuite execution
	* README: Now that the automake testsuite uses the parallel-tests
	driver, there is no need for the user to capture the stdout of