@@ -84,15 +84,6 @@ $AUTOCONF
 
 cp $testsrcdir/../lib/ylwrap .
 
-# FIXME: temporary workaround (taken from the automake manual) for
-#        automake bug#8485.  Remove once that bug is fixed.
-cat >> Makefile.am <<'END'
-AUTOMAKE_OPTIONS = -Wno-override
-distcleancheck_listfiles = \
-       find ./baz -type f -exec sh -c 'test -f $(srcdir)/$$1 || echo $$1' \
-            sh '{}' ';'
-END
-
 $AUTOMAKE Makefile
 
 # Try with -d in $(YFLAGS) (don't do this in real life!).
