@@ -1,5 +1,13 @@
 2011-12-27  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	yacc/lex tests: remove an unneeded workaround for bug#8485
+
+	* tests/yacc-d-cxx.test: Remove the workaround previously required
+	to avoid spurious failures due to automake bug#8485: that bug has
+	been solved with commit `v1.11-512-g40c3432'.
+
+2011-12-27  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
 	yacc/lex tests: avoid too much failures with FreeBSD make
 
 	In various Yacc/Lex tests, we used to run "make distcheck" commands
